--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 	<html lang="en">
 	<head>
-		<link rel="stylesheet" href="css/style.css"
+		<link rel="stylesheet" href="css/style.css">
 		<meta charset="UTF-8">
 		<title>Document</title>
 	</head>
 	<body>
-		
+		<nav class="top-navigation">
+			<div class="content"></div>
+		</nav>	
 	</body>
 	</html>	
