--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 	</head>
 	<body>
 		<nav class="top-navigation">
-			<div class="content"></div>
+			<div class="content">
+				<img class="logo" src="images/karma-logo.svg"
+				alt="Logo Image"
+				width="26px"
+				style="margin-left: 240px"
+				height: 70px;">
+			</div>
 		</nav>	
 	</body>
 	</html>	
