--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 				style="margin-left: 240px"
 				height: 70px;">
 			</div>
+			<ul class="links">
+				<li>Meet Karma</li>
+				<li>How It Works</li>
+				<li>Store</li>
+				<li>Blog</li>
+				<li>Help</li>
+				<li>Log In</li>
+			</ul>	
 		</nav>	
 	</body>
 	</html>	
