--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 				<img class="logo" src="images/karma-logo.svg"
 				alt="Logo Image"
 				width="26px"
-				style="margin-left: 240px"
-				height: 70px;">
-			</div>
+				style="height: 70px;">
 			<ul class="links">
 				<li>Meet Karma</li>
 				<li>How It Works</li>
@@ -21,7 +19,9 @@
 				<li>Blog</li>
 				<li>Help</li>
 				<li>Log In</li>
-			</ul>	
+			</ul>		
+			</div>
+			
 		</nav>	
 	</body>
 	</html>	
