--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 	<body>
 		<nav class="top-navigation">
 			<div class="content">
-				<img class="logo" src="images/karma-logo.svg"
-				alt="Logo Image"
-				width="26px"
-				style="height: 70px;">
 			<ul class="links">
 				<li>Meet Karma</li>
 				<li>How It Works</li>
@@ -20,6 +16,9 @@
 				<li>Help</li>
 				<li>Log In</li>
 			</ul>		
+				<img class="logo" src="images/karma-logo.svg"
+				alt="Logo Image"
+				width="26px">
 			</div>
 			
 		</nav>	
