--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<nav class="top-navigation">
 			<div class="content">
 				<ul class="links">
-				<li>Meet Karma</li>
+				<li class="active">Meet Karma</li>
 				<li>How It Works</li>
 				<li>Store</li>
 				<li>Blog</li>
@@ -21,7 +21,13 @@
 				alt="Logo Image"
 				width="26px">
 			</div>
-			
-		</nav>	
+		</nav>
+		<section class="introduction">
+    		<div class="content">
+        		<h1>Introducing Karma</h1>
+        		<h3>Bring WiFi with you, everywhere you go.</h3>
+        		<button>Learn More</button>
+    			</div>
+		</section>	
 	</body>
 	</html>	
