--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     		<div class="content">
         		<h1>Introducing Karma</h1>
         		<h3>Bring WiFi with you, everywhere you go.</h3>
+        		<div class="buttons">	
         		<button>Learn More</button>
-    			</div>
+        		<div>
+    		</div>
 		</section>	
 	</body>
 	</html>	
