--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 	<html lang="en">
 	<head>
+		<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 		<meta charset="UTF-8">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
@@ -48,7 +50,7 @@
                     </div>
                 </li>
                 <li>
-                    <img width="127px" height="127px" src="images/icon-refill.svg" alt="Pay as You Go image">
+                    <img width="127px" height="127px" src="imagesc/icon-refill.svg" alt="Pay as You Go image">
                     <div class="caption">
                         <h3>Pay as You Go</h3>
                     </div>
