--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 		<title>Karma</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-		<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
 		<link href="css/font-awesome.min.css" rel="stylesheet">
+		<link rel="icon" type="image/png" href="favicon_name.png" />
+	<!-- or -->
+		<link rel="shortcut icon" type="image/x-icon"  href="favicon_name.ico">
 	</head>
 	<body>
 		<nav class="top-navigation">
@@ -55,7 +58,7 @@
                         <h3>Pay as You Go</h3>
                     </div>
                 </li>
-            </ul>
+            	</ul>
         </div>
     </section>
     <footer class="social">
@@ -73,7 +76,7 @@
                 <li class="instagram">
                     <i class="fa fa-instagram"></i>
                 </li>
-            </ul>
+            	</ul>
             <span class="copy">
                 &copy; Karma Mobility, Inc.
             </span>
@@ -81,5 +84,4 @@
     </footer>
 </body>
 </html>	
-	</body>
-	</html>	
+	
